--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/shahbaz17/mdsbzalam.git"
+	},
 	"keywords": [
 		"mdsbzalam",
 		"mohammad",
@@ -16,5 +20,9 @@
 		"alam"
 	],
 	"author": "hey@mdsbzalam.dev",
-	"license": "ISC"
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/shahbaz17/mdsbzalam/issues"
+	},
+	"homepage": "https://github.com/shahbaz17/mdsbzalam#readme"
 }
